--- a/sheduling-list.html
+++ b/sheduling-list.html
@@ -16,10 +16,10 @@
   <!-- ===============================================-->
   <!--    Favicons-->
   <!-- ===============================================-->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
+  <!-- <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico"> -->
   <link rel="manifest" href="assets/img/favicons/manifest.json">
   <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png">
   <meta name="theme-color" content="#ffffff">
@@ -84,7 +84,7 @@
                 <div class="nav-item-wrapper">
                     <div class="parent-wrapper label-1">
                       <ul class="nav collapse parent show" data-bs-parent="#navbarVerticalCollapse" id="nv-home">
-                        <li class="collapsed-nav-item-title d-none">Sheduling
+                        <li class="collapsed-nav-item-title d-none">scheduling
                         </li>
                         <li class="nav-item"><a class="nav-link active" href="userForm.html" data-bs-toggle=""
                             aria-expanded="false">
@@ -106,7 +106,7 @@
                                   stroke-linejoin="round" class="feather feather-pie-chart">
                                   <path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path>
                                   <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
-                                </svg></span><span class="nav-link-text px-0">Sheduling List</span>
+                                </svg></span><span class="nav-link-text px-0">scheduling List</span>
                             </div>
                           </a>
     
@@ -1756,7 +1756,7 @@
                 class="toggle-line"></span></span></button>
           <a class="navbar-brand me-1 me-sm-3" href="#">
             <div class="d-flex align-items-center">
-              <div class="d-flex align-items-center"><img src="assets/img/icons/logo.png" alt="phoenix" width="27" />
+              <div class="d-flex align-items-center">
                 <p class="logo-text ms-2 d-none d-sm-block">BrookField</p>
               </div>
             </div>
@@ -2130,7 +2130,7 @@
       <div class="pb-5">
         <div class="row gy-3 mb-6 justify-content-between">
           <div class="col-md-9 col-auto">
-            <h2 class="mb-2 text-1100">Sheduling List</h2>
+            <h2 class="mb-2 text-1100">scheduling List</h2>
             <h5 class="text-700 fw-semi-bold">Here’s what’s going on at your business right now</h5>
           </div>
           
@@ -2143,8 +2143,8 @@
               <table class="table table-sm fs--1 mb-0">
                 <thead>
                   <tr>
-                    <th class="sort border-top ps-3" data-sort="name">Shedule Date</th>
-                    <th class="sort border-top" data-sort="email">Shedule By</th>
+                    <th class="sort border-top ps-3" data-sort="name">schedule Date</th>
+                    <th class="sort border-top" data-sort="email">schedule By</th>
                     <th class="sort border-top" data-sort="age">TimeSlot</th>
                     <th class="sort border-top" data-sort="age">No. of Unites</th>
                     <th class="sort border-top" data-sort="age">Action</th>
@@ -2332,8 +2332,7 @@
         <footer class="footer position-absolute">
           <div class="row g-0 justify-content-between align-items-center h-100">
             <div class="col-12 col-sm-auto text-center">
-              <p class="mb-0 mt-2 mt-sm-0 text-900">Thank you for creating with Phoenix<span
-                  class="d-none d-sm-inline-block"></span><span class="d-none d-sm-inline-block mx-1">|</span><br
+              <p class="mb-0 mt-2 mt-sm-0 text-900"><br
                   class="d-sm-none" />2023 &copy;<a class="mx-1" href="">Vishleshan</a></p>
             </div>
             <div class="col-12 col-sm-auto text-center">
