--- a/userForm.html
+++ b/userForm.html
@@ -16,10 +16,10 @@
     <!-- ===============================================-->
     <!--    Favicons-->
     <!-- ===============================================-->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico"> -->
     <link rel="manifest" href="assets/img/favicons/manifest.json">
     <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
@@ -82,7 +82,7 @@
                                 <div class="parent-wrapper label-1">
                                     <ul class="nav collapse parent show" data-bs-parent="#navbarVerticalCollapse"
                                         id="nv-home">
-                                        <li class="collapsed-nav-item-title d-none">Sheduling
+                                        <li class="collapsed-nav-item-title d-none">scheduling
                                         </li>
                                         <li class="nav-item"><a class="nav-link active" href="userForm.html"
                                                 data-bs-toggle="" aria-expanded="false">
@@ -110,7 +110,7 @@
                                                             class="feather feather-pie-chart">
                                                             <path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path>
                                                             <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
-                                                        </svg></span><span class="nav-link-text px-0">Sheduling
+                                                        </svg></span><span class="nav-link-text px-0">scheduling
                                                         List</span>
                                                 </div>
                                             </a>
@@ -1744,13 +1744,13 @@
                     </ul>
                 </div>
             </div>
-            <!-- <div class="navbar-vertical-footer">
+            <div class="navbar-vertical-footer">
                 <button
                     class="btn navbar-vertical-toggle border-0 fw-semi-bold w-100 white-space-nowrap d-flex align-items-center"><span
                         class="uil uil-left-arrow-to-left fs-0"></span><span
                         class="uil uil-arrow-from-right fs-0"></span><span
                         class="navbar-vertical-footer-text ms-2">Collapsed View</span></button>
-            </div> -->
+            </div>
         </nav>
         <nav class="navbar navbar-top fixed-top navbar-expand" id="navbarDefault">
             <div class="collapse navbar-collapse justify-content-between">
@@ -1763,8 +1763,7 @@
                                 class="toggle-line"></span></span></button>
                     <a class="navbar-brand me-1 me-sm-3" href="#">
                         <div class="d-flex align-items-center">
-                            <div class="d-flex align-items-center"><img src="assets/img/icons/logo.png" alt="phoenix"
-                                    width="27" />
+                            <div class="d-flex align-items-center">
                                 <p class="logo-text ms-2 d-none d-sm-block">BrookField</p>
                             </div>
                         </div>
@@ -2210,17 +2209,15 @@
 
 
             <footer class="footer position-absolute">
-                <div class="row g-0 justify-content-between align-items-center h-100">
-                    <div class="col-12 col-sm-auto text-center">
-                        <p class="mb-0 mt-2 mt-sm-0 text-900">Thank you for creating with Phoenix<span
-                                class="d-none d-sm-inline-block"></span><span
-                                class="d-none d-sm-inline-block mx-1">|</span><br class="d-sm-none" />2023 &copy;<a
-                                class="mx-1" href="">Vishleshan</a></p>
-                    </div>
-                    <div class="col-12 col-sm-auto text-center">
-                        <p class="mb-0 text-600">v1.13.0</p>
-                    </div>
+              <div class="row g-0 justify-content-between align-items-center h-100">
+                <div class="col-12 col-sm-auto text-center">
+                  <p class="mb-0 mt-2 mt-sm-0 text-900"><br
+                      class="d-sm-none" />2023 &copy;<a class="mx-1" href="">Vishleshan</a></p>
                 </div>
+                <div class="col-12 col-sm-auto text-center">
+                  <p class="mb-0 text-600">v1.13.0</p>
+                </div>
+              </div>
             </footer>
         </div>
         </div>
